--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+  font-family: Arial, Futura, sans-serif;
+}
+
 .wrapper {
   width: 670px;
   margin: 0 auto;
@@ -12,13 +16,33 @@ header {
   text-align: center;
 }
 
+/* Липкое позиционирование навигации
+header {
+  position: sticky; 
+  top: 0; 
+}
+*/
+
+header nav {
+  display: inline-block;
+}
+
 header nav ul {
   margin: 0;
-  padding: 0;
+  padding: 0;  
 }
 
 header nav ul li {
   display: inline;
+}
+
+header nav ul li a, header nav ul li a:visited {
+  color: inherit; 
+  text-decoration: none;
+}
+
+header nav ul li a:hover {
+  color: grey;
 }
 
 main {
@@ -29,4 +53,8 @@ main {
 footer {
   padding: 10px 50px 10px 50px;
   text-align: center;
+}
+
+pre {
+  border: 1px solid #ccc;
 }
