--- a/style.css
+++ b/style.css
@@ -32,6 +32,10 @@ header nav ul li {
   display: inline-block;
 }
 
+header nav ul li:not(:first-child) {
+  padding-left: 10px;
+}
+
 header nav ul li a, header nav ul li a:visited {
   color: inherit; 
   text-decoration: none;
